* Refactored author "About" box to not show empty details

= CSS =
* Added ordered list styles for pages with comments
* Added classes to author "About" box details for easier display manipulation
* Adjusted '.wp-caption img' properties
* Adjusted 'li.text_widget' margin values
* Adjusted various CSS elements and properties to display TUT data more correctly

/** ------------------------------------------------------------------------- */
== Version 2.2 ==
= Code =
* Added filtered text messages when comments are open/closed but none exist
* Added link to author page when comments closed message is displayed
* Added code block termination comments
* Minor code formatting / refactoring to use "braces" for code blocks
* Refactor post meta details into a better string output

= CSS =
* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
* Added CSS relevant to the "Monster" plugin that represents the default WordPress core plugins

= Miscellaneous =
* Updated 'style.css' header block to use labels as noted in core trac ticket #16868

/** ------------------------------------------------------------------------- */
== Version 2.1 ==
Changelog: December 3, 2012
= Code =
* Added DMM_HOME_DOMAIN constant for better future proofing
* Added 'DMM No Posts Found' function to replace repetitive code
* Removed backward compatibility checks to bring in line with current WordPress versions (3.4+)
* Removed DMM_Add_Body_Classes in favor of using BNS Body Classes at http://wordpress.org/extend/plugins/bns-body-classes/

/** ------------------------------------------------------------------------- */
== Version 2.0.4 ==
Changelog: August 21, 2012
= Code =
* Corrected use of `get_template_directory` in `load_theme_textdomain` parameters
* Removed backward compatibility check for wp_nav_menu
* Changed enqueued version to be dynamically taken from theme version