@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="* Refactored author &quot;About&quot; box to not show empty details&#10;* Added classes to author &quot;About&quot; box details for easier display manipulation">
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/author.php" afterPath="$PROJECT_DIR$/author.php" />
+    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/index.php" afterPath="$PROJECT_DIR$/index.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/style.css" afterPath="$PROJECT_DIR$/style.css" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
     <ignored path="desk-mess-mirrored.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374068941485" ignored="false" />
-    <file path="/changelog.txt" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374068952799" ignored="false" />
+    <file path="/Dummy.txt" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374068961173" ignored="false" />
+    <file path="/changelog.txt" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374069313915" ignored="false" />
     <file path="$PROJECT_DIR$/../shades/functions.php" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1366674405751" ignored="false" />
     <file path="/functions.php" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1366674315196" ignored="false" />
     <file path="$PROJECT_DIR$/../shades/changelog.txt" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1366674413984" ignored="false" />
-    <file path="/style.css" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1373844058231" ignored="false" />
+    <file path="/style.css" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374069267514" ignored="false" />
     <file path="/desk-mess-mirrored.php" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1373996285553" ignored="false" />
     <file path="/author.php" changelist="83d593d7-4db7-4223-a0d1-7326e99a5cd8" time="1374068678071" ignored="false" />
     <option name="TRACKING_ENABLED" value="true" />
@@ -59,7 +58,16 @@
       <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="10" column="33" selection-start="342" selection-end="342" vertical-scroll-proportion="0.25110784">
+            <state line="14" column="0" selection-start="551" selection-end="551" vertical-scroll-proportion="0.35155097">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="style.css" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/style.css">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="1120" column="37" selection-start="24294" selection-end="24294" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
@@ -94,13 +102,13 @@
         <option value="$PROJECT_DIR$/page.php" />
         <option value="$PROJECT_DIR$/single.php" />
         <option value="$PROJECT_DIR$/readme.txt" />
-        <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/comments.php" />
         <option value="$PROJECT_DIR$/desk-mess-mirrored-status.php" />
         <option value="$PROJECT_DIR$/desk-mess-mirrored.php" />
         <option value="$PROJECT_DIR$/functions.php" />
         <option value="$PROJECT_DIR$/index.php" />
         <option value="$PROJECT_DIR$/author.php" />
+        <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
@@ -405,7 +413,11 @@
       <created>1373996422651</created>
       <updated>1373996422651</updated>
     </task>
-    <option name="localTasksCounter" value="32" />
+    <task id="LOCAL-00032" summary="* Refactored author &quot;About&quot; box to not show empty details&#10;* Added classes to author &quot;About&quot; box details for easier display manipulation">
+      <created>1374068963503</created>
+      <updated>1374068963503</updated>
+    </task>
+    <option name="localTasksCounter" value="33" />
     <servers />
   </component>
   <component name="TodoView" selected-index="0">
@@ -499,7 +511,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Code cleanup" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Refactored author &quot;About&quot; box to not show empty details&#10;* Added classes to author &quot;About&quot; box details for easier display manipulation" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -513,7 +525,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="IDE update" />
     <MESSAGE value="Theme version check conditional corrections" />
     <MESSAGE value="Added note about &quot;wip&quot; folder contents" />
     <MESSAGE value="Updated `custom-background` parameters to use default image and color" />
@@ -538,6 +549,7 @@
     <MESSAGE value="* Adjusted '.wp-caption img' properties" />
     <MESSAGE value="* Adjusted various CSS elements and properties to display TUT data more correctly" />
     <MESSAGE value="* Code cleanup" />
+    <MESSAGE value="* Refactored author &quot;About&quot; box to not show empty details&#10;* Added classes to author &quot;About&quot; box details for easier display manipulation" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -566,11 +578,6 @@
     <entry file="file://$PROJECT_DIR$/footer.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/style.css">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="696" column="23" selection-start="16326" selection-end="16326" vertical-scroll-proportion="-242.76" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/comments.php">
@@ -631,9 +638,16 @@
         </state>
       </provider>
     </entry>
+    <entry file="file://$PROJECT_DIR$/style.css">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="1120" column="37" selection-start="24294" selection-end="24294" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="10" column="33" selection-start="342" selection-end="342" vertical-scroll-proportion="0.25110784">
+        <state line="14" column="0" selection-start="551" selection-end="551" vertical-scroll-proportion="0.35155097">
           <folding />
         </state>
       </provider>
